solve returns Client Cases from Controller (Because of Client Model {legalCases function}) , solve Date Icon (not visible in Session adding form) in Case show page and enhance input-File in the same form , edit cases index page to show data depends on Current user (Lawyer Or Client)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,6 +31,11 @@
             contrast(0%);
     }
 }
+/* Target the pseudo-element for the calendar icon (Chrome specific) */
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+    filter: invert(1) brightness(0.5); /* Invert colors and adjust brightness */
+  }
+  
 
 /* ------------------scrollbar-------------------- */
 /* width */
